fix(ListLayout): align to bottom

--- a/layouts/ListLayout.module.css
+++ b/layouts/ListLayout.module.css
@@ -12,12 +12,12 @@
     }
 }
 
-.header{
+.header {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     padding: 0 0 0 2rem;
     gap: 1rem;
     position: relative;
@@ -31,9 +31,8 @@
 
 .header p:last-of-type {
     position: absolute;
-    top: 50%;
     left: 48.4%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
     z-index: 1;
 }
 
